<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#555555"
    android:gravity="center"
    android:orientation="vertical"
    android:weightSum="10"
    android:onClick="tapHome"
    tools:context=".HowToActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:background="@drawable/home_background"
        android:orientation="vertical"
        android:weightSum="10">

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"></Space>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="10">

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:background="@drawable/btn_state"
                android:text="@string/btn_sharp"
                android:textColor="#65a7e1"
                android:textSize="24sp"
                android:textStyle="bold"></Button>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="16sp"
            android:text="@string/text_howToSharp"></TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="10">

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:background="@drawable/btn_state"
                android:text="@string/btn_mild"
                android:textColor="#65a7e1"
                android:textSize="24sp"
                android:textStyle="bold"></Button>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="16sp"
            android:text="@string/text_howToMild"></TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="10">

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:background="@drawable/btn_state"
                android:text="@string/btn_hard"
                android:textColor="#65a7e1"
                android:textSize="24sp"
                android:textStyle="bold"></Button>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="16sp"
            android:text="@string/text_howToHard"></TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="10">

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:background="@drawable/btn_state"
                android:text="@string/btn_free"
                android:textColor="#65a7e1"
                android:textSize="24sp"
                android:textStyle="bold"></Button>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="16sp"
            android:text="@string/text_howToFree"></TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="16sp"
            android:text="@string/text_howTo"></TextView>
    </LinearLayout>

</LinearLayout>