<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home_background"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".SettingActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center|bottom"
        android:text="@string/text_setting"
        android:textColor="@android:color/white"
        android:textSize="36sp"
        android:textStyle="bold"></TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:gravity="right|bottom"
            android:text="@string/text_totalAmount"
            android:textSize="24sp"></TextView>

        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="left|bottom"
            android:hint="15,000"
            android:id="@+id/edit_totalAmount"
            android:textSize="24sp"></EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:gravity="right|bottom"
            android:text="@string/text_player"
            android:textSize="24sp"></TextView>

        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="left|bottom"
            android:hint="5"
            android:id="@+id/edit_members"
            android:textSize="24sp"></EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="10">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:background="@drawable/btn_state"
            android:onClick="tapSharp"
            android:text="@string/btn_sharp"
            android:textColor="#65a7e1"
            android:textSize="24sp"
            android:textStyle="bold"></Button>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="10">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:background="@drawable/btn_state"
            android:onClick="tapMild"
            android:text="@string/btn_mild"
            android:textColor="#65a7e1"
            android:textSize="24sp"
            android:textStyle="bold"></Button>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="10">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:background="@drawable/btn_state"
            android:onClick="tapHard"
            android:text="@string/btn_hard"
            android:textColor="#65a7e1"
            android:textSize="24sp"
            android:textStyle="bold"></Button>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="10">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:background="@drawable/btn_state"
            android:onClick="tapFree"
            android:text="@string/btn_free"
            android:textColor="#65a7e1"
            android:textSize="24sp"
            android:textStyle="bold"></Button>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="10">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:background="@drawable/btn_state"
            android:onClick="tapHome"
            android:text="@string/btn_home"
            android:textColor="#65a7e1"
            android:textSize="24sp"
            android:textStyle="bold"></Button>

    </LinearLayout>

</LinearLayout>