<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home_background"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".FreeModeActivity">

    <TextView
        android:id="@+id/textOrder"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center"
        android:textSize="36sp"
        android:textStyle="bold"></TextView>

    <TextView
        android:id="@+id/text_amount"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center"
        android:text="@string/text_tap"
        android:textColor="#ff0000"
        android:textSize="58sp"
        android:textStyle="bold"></TextView>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:clickable="true"
        android:onClick="tapTile"
        android:id="@+id/imageTile"
        android:src="@drawable/unbroken_tile"></ImageView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="10">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:background="@drawable/btn_state"
            android:onClick="tapNext"
            android:id="@+id/btn_next"
            android:text="@string/btn_nextMember"
            android:textColor="#65a7e1"
            android:textSize="24sp"
            android:textStyle="bold"></Button>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="10">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:background="@drawable/btn_state"
            android:onClick="tapSetting"
            android:text="@string/btn_setting"
            android:textColor="#65a7e1"
            android:textSize="24sp"
            android:textStyle="bold"></Button>
    </LinearLayout>

</LinearLayout>